--- a/src/app/components/game/game.component.css
+++ b/src/app/components/game/game.component.css
@@ -4,7 +4,7 @@
     margin-top: 20px;
     position: relative;
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
+    background: linear-gradient(to right, #f80707 0%, #38fa0c 100%);
     padding: 20px;
     border-radius: 15px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -29,7 +29,7 @@
     font-weight: bold;
     color: #4a4a4a;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
-    background: rgba(255, 255, 255, 0.8);
+    background: rgba(89, 249, 9, 0.8);
     padding: 10px 20px;
     border-radius: 10px;
     display: inline-block;
@@ -37,7 +37,7 @@
   
   .hangman-image {
     width: 200px;
-    height: 500px;
+    height: auto;
     margin-bottom: 20px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     border-radius: 10px;
