Agregando las imagenes que se usaran en los intentos del ahorcado, ademas de modificar y agregar cosas en el componente home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,16 +1,23 @@
-
 <div class="container">
     <h1 class="my-4">Juego el ahorcado </h1>
+    <p class="mt-4">¡Pon a prueba tus habilidades de adivinanza con este entretenido juego de palabras!</p>
     <h2 class="my-4">Integrantes</h2>
     <ul class="list-group">
-      <li class="list-group-item">name marco y otros</li>
-      <li class="list-group-item">name gente</li>
-      <li class="list-group-item">name gente</li>
-      <li class="list-group-item">nombre del nose</li>
+      <li class="list-group-item">David Alfredo Huamani Ollachica</li>
+      <li class="list-group-item">Marco Antonio Suarez Huaman</li>
+      <li class="list-group-item">Rafael Diego Nina Calizaya</li>
+      <li class="list-group-item">Angel Paul Apaza Nazareth</li>
     </ul>
-    <button routerLink="/game" class="btn btn-primary">Play</button>
-    <p class="mt-4">
-      gentita aqui ponen las instruciones el juego xd
-    </p>
-  </div>
-  
+    <button routerLink="/game" class="btn btn-primary">Empezar a Jugar</button>
+      <div class="instructions">
+        <h2>Instrucciones</h2>
+        <ul>
+          <li>Presiona "Empezar a Jugar" para iniciar una nueva partida.</li>
+          <li>Selecciona letras para adivinar la palabra oculta.</li>
+          <li>Si adivinas una letra correctamente, aparecerá en su lugar en la palabra.</li>
+          <li>Si adivinas incorrectamente, perderás un intento y el dibujo del ahorcado se completará un poco más.</li>
+          <li>Ganas si adivinas la palabra completa antes de que se terminen los intentos.</li>
+          <li>Pierdes si se completan todos los intentos sin adivinar la palabra.</li>
+        </ul>
+    </div>
+</div>
